[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 62.0.0", "wheel"]

[project]
authors = [{name = "Erich Nguyen", email = "erich.nguyen@outlook.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Framework :: aiohttp",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Typing :: Typed",
]
dependencies = ["aiohttp==3.8.1", "typing-extensions==4.2.0"]
description = "A simple experimental Python wrapper for the Ravy API."
keywords = [
  "API",
  "Python",
  "Ravy",
  "Wrapper",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "Erich Nguyen", email = "erich.nguyen@outlook.com"},
]
name = "plane"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0a"

[project.urls]
homepage = "https://github.com/GoogleGenius/plane"
repository = "https://github.com/GoogleGenius/plane"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["plane*"]

[tool.pyright]
pythonVersion = "3.7"
reportUnnecessaryIsInstance = false
reportPrivateUsage = "warning"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.7"
strict = true

[tool.black]
lineLength = 88

[tool.isort]
profile = "black"
