[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 62.0.0", "wheel"]

[project]
authors = [{name = "Erich Nguyen", email = "erich.nguyen@outlook.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Framework :: aiohttp",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  "Typing :: Typed",
]
dependencies = ["aiohttp~=3.8", "typing-extensions~=4.1"]
description = "A simple experimental Python wrapper for the Ravy API."
keywords = [
  "API",
  "Python",
  "Ravy",
  "Wrapper",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "Erich Nguyen", email = "erich.nguyen@outlook.com"},
]
name = "RavyAPI.py"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0a"

[project.urls]
homepage = "https://github.com/GoogolGenius/RavyAPI.py"
repository = "https://github.com/GoogolGenius/RavyAPI.py"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["ravyapi*"]

[tool.pyright]
pythonVersion = "3.8"
reportUnnecessaryIsInstance = false
reportPrivateUsage = "warning"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.8"
strict = true

[tool.black]
lineLength = 88

[tool.isort]
profile = "black"
